--- a/netlify.toml
+++ b/netlify.toml
@@ -1,6 +1,6 @@
 [build]
-  command = "npm run build"
-  publish = "dist"
+  command = "cd client && npm install && npm run build"
+  publish = "client/dist"
   functions = "netlify/functions"
 
 [dev]
@@ -12,3 +12,12 @@
   from = "/*"
   to = "/index.html"
   status = 200
+  force = true
+
+[build.environment]
+  NODE_VERSION = "18"
+  NPM_FLAGS = "--legacy-peer-deps"
+
+[context.production]
+  command = "cd client && npm install --legacy-peer-deps && npm run build"
+  publish = "client/dist"
