--- a/netlify.toml
+++ b/netlify.toml
@@ -1,6 +1,6 @@
 [build]
-  command = "cd client && npm install && npm run build"
-  publish = "client/dist"
+  command = "npm install && npm run build"
+  publish = "dist"
   functions = "netlify/functions"
 
 [dev]
