Prepare for deployment: Update .gitignore, add new components, and update configurations

--- a/client/tsconfig.json
+++ b/client/tsconfig.json
@@ -26,5 +26,7 @@
     }
   },
   "include": ["src"],
+  "typeRoots": ["./node_modules/@types", "./src/types"],
+  "types": ["vite/client"],
   "references": [{ "path": "./tsconfig.node.json" }]
 }
