--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,39 @@
-node_modules
-dist
+# Dependencies
+node_modules/
+.pnp
+.pnp.js
+
+# Build outputs
+/dist
+/build
+/.netlify
+
+# Environment variables
+.env
+.env.local
+.env.development
+.env.test
+.env.production
+
+# Debug logs
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+
+# Editor directories and files
 .DS_Store
-server/public
-vite.config.ts.*
+.idea
+.vscode/
+*.suo
+*.ntvs*
+*.njsproj
+*.sln
+*.sw?
+
+# Local development
+.cache/
+coverage/
+
+# Misc
+*.log
 *.tar.gz
-# Local Netlify folder
-.netlify
