--- a/client/package.json
+++ b/client/package.json
@@ -20,6 +20,8 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.57.0",
+    "react-router-dom": "^7.6.2",
+    "tailwind-merge": "^3.3.0",
     "wouter": "^3.3.0",
     "zod": "^3.25.49"
   },
