--- a/netlify.toml
+++ b/netlify.toml
@@ -1,23 +1,33 @@
 [build]
   command = "cd client && npm install --legacy-peer-deps && npm run build"
   publish = "client/dist"
-  functions = "netlify/functions"
 
-[dev]
-  framework = "vite"
-  target = "dist"
-  port = 3000
-
+# Handle SPA routing
 [[redirects]]
   from = "/*"
   to = "/index.html"
   status = 200
-  force = true
 
-[build.environment]
-  NODE_VERSION = "18"
-  NPM_FLAGS = "--legacy-peer-deps"
+# Handle assets
+[[headers]]
+  for = "/assets/*"
+  [headers.values]
+    Cache-Control = "public, max-age=31536000, immutable"
 
-[context.production]
+# Security headers
+[[headers]]
+  for = "/*"
+  [headers.values]
+    X-Content-Type-Options = "nosniff"
+    X-Frame-Options = "DENY"
+    X-XSS-Protection = "1; mode=block"
+    Referrer-Policy = "strict-origin-when-cross-origin"
+
+[dev]
+  command = "cd client && npm run dev"
+  port = 3000
+
+# Development context (optional)
+[context.deploy-preview]
   command = "cd client && npm install --legacy-peer-deps && npm run build"
   publish = "client/dist"
