--- a/package.json
+++ b/package.json
@@ -4,11 +4,13 @@
   "type": "module",
   "license": "MIT",
   "scripts": {
-    "dev": "NODE_ENV=development tsx server/index.ts",
-    "build": "vite build && esbuild server/index.ts --platform=node --packages=external --bundle --format=esm --outdir=dist",
-    "start": "NODE_ENV=production node dist/index.js",
-    "check": "tsc",
-    "db:push": "drizzle-kit push"
+    "dev": "cd client && npm run dev",
+    "build": "cd client && npm install --legacy-peer-deps && npm run build",
+    "start": "cd client && npm run preview",
+    "check": "cd client && npm run type-check",
+    "db:push": "drizzle-kit push",
+    "client": "cd client && npm run dev",
+    "serve": "cd client && npm run preview"
   },
   "dependencies": {
     "@hookform/resolvers": "^3.10.0",
