--- a/netlify.toml
+++ b/netlify.toml
@@ -1,6 +1,8 @@
 [build]
   command = "cd client && npm install --legacy-peer-deps && npm run build"
   publish = "client/dist"
+  [build.environment]
+    PYTHON_VERSION = "3.10"
 
 # Handle SPA routing
 [[redirects]]
