--- a/netlify.toml
+++ b/netlify.toml
@@ -1,10 +1,11 @@
 [build]
-  command = "rm -rf node_modules && rm -rf client/node_modules && cd client && npm install --legacy-peer-deps && npm run build"
+  command = "cd client && npm install --legacy-peer-deps && npm run build"
   publish = "client/dist"
 
 [build.environment]
-  NODE_VERSION = "20"
-  PYTHON_VERSION = "3.9"
+  NODE_VERSION = "18"
+  NPM_FLAGS = "--legacy-peer-deps"
+  NPM_TOKEN = "dummy_value"
 
 # Handle SPA routing
 [[redirects]]
