feat: Add comprehensive menu translations and internationalization support
- Added English and Spanish translations for the menu section
- Implemented i18n configuration and language switching
- Added LanguageSelector component
- Updated UI components to use translations

--- a/client/tsconfig.json
+++ b/client/tsconfig.json
@@ -26,7 +26,10 @@
     }
   },
   "include": ["src"],
-  "typeRoots": ["./node_modules/@types", "./src/types"],
+  "typeRoots": [
+    "./node_modules/@types",
+    "./src/types"
+  ],
   "types": ["vite/client"],
   "references": [{ "path": "./tsconfig.node.json" }]
 }
