--- a/client/package.json
+++ b/client/package.json
@@ -17,10 +17,16 @@
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
     "framer-motion": "^12.15.0",
+    "i18next": "^25.2.1",
+    "i18next-browser-languagedetector": "^8.1.0",
+    "i18next-http-backend": "^3.0.2",
     "lucide-react": "^0.511.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-feather": "^2.0.10",
+    "react-helmet-async": "^2.0.5",
     "react-hook-form": "^7.57.0",
+    "react-i18next": "^15.5.2",
     "react-router-dom": "^7.6.2",
     "tailwind-merge": "^3.3.0",
     "wouter": "^3.3.0",
